# news-aggregator

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  ARCHITECTURE_AND_DESIGN.md  DETAILED_DESIGN.md  FUNCTIONAL_REQUIREMENTS.md  README.md  config.yaml  pyproject.toml  test_fallback.py  └── (code files to be added in next steps)
[Telegram Bot /:  Scheduler] --> [Formatted Status Report] --> [User Telegram]
src/news_aggregator/: config.py  main.py
src/news_aggregator/agents/: article_processor.py  base.py  context_tracker.py  facts_summarizer.py  impact_analyzer.py
src/news_aggregator/db/: models.py  repository.py  vector_store.py
src/news_aggregator/fetcher/: deduplicator.py  rss_fetcher.py
src/news_aggregator/pipeline/: orchestrator.py
src/news_aggregator/telegram/: bot.py  formatter.py
src/news_aggregator/web/: server.py
src/news_aggregator/web/templates/: index.html
tests/: check_quota.py  test_api_flash_latest.py  test_api_list_models.py  test_api_minimal.py  test_api_v1_5_flash.py  test_api_v2_flash.py  verify_agents.py  verify_phase1.py  verify_phase2.py  verify_pipeline.py
